--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   timeago: ^2.0.18
   geocoder: ^0.2.1
+  image_picker: ^0.6.1
 
 dev_dependencies:
   flutter_test:
