--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  uuid: ^2.0.2
   timeago: ^2.0.18
   geocoder: ^0.2.1
   image_picker: ^0.6.1
